--- a/index.html
+++ b/index.html
@@ -15,11 +15,22 @@
   <body>
     <header>
       <div class="jumbotron jumbotron-fluid">
-        <div class="container text-center">
+        <div class="container">
           <h1 class="display-4">SMART Syndrome</h1>
           <p class="lead">
             The Greatest Neuro Family In Known History
           </p>
+        </div>
+        <div class="btn-group" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary">
+            Meet the Family
+          </button>
+          <button type="button" class="btn btn-secondary">
+            Send the Family a Message
+          </button>
+          <button type="button" class="btn btn-secondary">
+            Trash Talk the Other Families
+          </button>
         </div>
       </div>
     </header>
