--- a/index.html
+++ b/index.html
@@ -21,17 +21,40 @@
             The Greatest Neuro Family In Known History
           </p>
         </div>
-        <div class="btn-group" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary">
-            Meet the Family
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
           </button>
-          <button type="button" class="btn btn-secondary">
-            Send the Family a Message
-          </button>
-          <button type="button" class="btn btn-secondary">
-            Trash Talk the Other Families
-          </button>
-        </div>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#"
+                  >Home <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="trashtalk.html"
+                  >Trash Talk the Other Families</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="sendmessage.html"
+                  >Send a Supportive Message to SMART Syndrome</a
+                >
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
     </header>
     <div>
