--- a/sendmessage.html
+++ b/sendmessage.html
@@ -6,6 +6,10 @@
     <title>Send Message</title>
   </head>
   <body>
-    alert("Send Message to SMART Syndrome About How Great They Are.")
+    <script>
+      alert(
+        "Message has been sent to SMART Syndrome about how great they are."
+      );
+    </script>
   </body>
 </html>
