--- a/trashtalk.html
+++ b/trashtalk.html
@@ -6,6 +6,8 @@
     <title>Trash Talk</title>
   </head>
   <body>
-    alert("The Other Families are the Worst!")
+    <script>
+      alert("The Other Families are the Worst!");
+    </script>
   </body>
 </html>
