--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             The Greatest Neuro Family In Known History
           </p>
         </div>
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <nav class="navbar navbar-expand-md">
           <a class="navbar-brand" href="#">Navbar</a>
           <button
             class="navbar-toggler"
