--- a/sendmessage.html
+++ b/sendmessage.html
@@ -10,6 +10,7 @@
       alert(
         "Message has been sent to SMART Syndrome about how great they are."
       );
+      window.location.href = "./index.html";
     </script>
   </body>
 </html>
