--- a/trashtalk.html
+++ b/trashtalk.html
@@ -8,6 +8,7 @@
   <body>
     <script>
       alert("The Other Families are the Worst!");
+      window.location.href = "./index.html";
     </script>
   </body>
 </html>
