put in correct logo

--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
       </div>
     </header>
     <div>
-      <img
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/US_fallout_shelter_symbol.svg/1024px-US_fallout_shelter_symbol.svg.png"
-        alt="nukes"
-        class="img-fluid"
-      />
+      <img src="./logo.png" alt="logo" class="img-fluid" />
     </div>
 
     <!-- javascript stuff -->
