--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
         </nav>
       </div>
     </header>
+    <div class="row">
+      <p>
+        It is now official, with the Fearless Leader Chief Residentness's
+        proclomation, in exactly her words:
+      </p>
+      <p id="quote">
+        The very first HOUSE monthly winner is SMART SYNDROME HOUSE!!!!
+        Congratulations Alanna Balbi, Adam Kroopnick, Grace Russo, Emanuele
+        Barca, Alec Friedman, Austin Wang, Min Ye Shen, Rachelle Dugue, Eileen
+        Harrigan, Bryanna Gulotta, Angel Maldonado-Soto, & Charles Beaman -
+        Check your emails soon for a prize!!
+      </p>
+    </div>
     <div>
       <img src="./logo.png" alt="logo" class="img-fluid" />
     </div>
