--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
         Harrigan, Bryanna Gulotta, Angel Maldonado-Soto, & Charles Beaman -
         Check your emails soon for a prize!!
       </p>
+      <p>
+        Truly inspiring words there. What will be the prize? Will it be extra
+        time off? A free lunch? Extra shifts? Click the predict a prize link to
+        see what the SMARTSYNDROME ROBOT thinks!
+      </p>
     </div>
     <div>
       <img src="./logo.png" alt="logo" class="img-fluid" />
