prize wheel works

--- a/index.html
+++ b/index.html
@@ -57,29 +57,32 @@
                   >Send a Supportive Message to SMART Syndrome</a
                 >
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="prizeWheel.html"
+                  >Spin the Prize Wheel!</a
+                >
+              </li>
             </ul>
           </div>
         </nav>
       </div>
     </header>
-    <div class="row">
-      <p>
-        It is now official, with the Fearless Leader Chief Residentness's
-        proclomation, in exactly her words:
-      </p>
-      <p id="quote">
-        The very first HOUSE monthly winner is SMART SYNDROME HOUSE!!!!
-        Congratulations Alanna Balbi, Adam Kroopnick, Grace Russo, Emanuele
-        Barca, Alec Friedman, Austin Wang, Min Ye Shen, Rachelle Dugue, Eileen
-        Harrigan, Bryanna Gulotta, Angel Maldonado-Soto, & Charles Beaman -
-        Check your emails soon for a prize!!
-      </p>
-      <p>
-        Truly inspiring words there. What will be the prize? Will it be extra
-        time off? A free lunch? Extra shifts? Click the predict a prize link to
-        see what the SMARTSYNDROME ROBOT thinks!
-      </p>
-    </div>
+    <p>
+      It is now official, with the Fearless Leader Chief Residentness's
+      proclomation, in exactly her words:
+    </p>
+    <p id="quote">
+      The very first HOUSE monthly winner is SMART SYNDROME HOUSE!!!!
+      Congratulations Alanna Balbi, Adam Kroopnick, Grace Russo, Emanuele Barca,
+      Alec Friedman, Austin Wang, Min Ye Shen, Rachelle Dugue, Eileen Harrigan,
+      Bryanna Gulotta, Angel Maldonado-Soto, & Charles Beaman - Check your
+      emails soon for a prize!!
+    </p>
+    <p>
+      Truly inspiring words there. What will be the prize? Will it be extra time
+      off? A free lunch? Extra shifts? Click the predict a prize link to see
+      what the SMARTSYNDROME ROBOT thinks!
+    </p>
     <div>
       <img src="./logo.png" alt="logo" class="img-fluid" />
     </div>
