--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="prizeWheel.html"
+                <a class="nav-link" href="prizewheel.html"
                   >Spin the Prize Wheel!</a
                 >
               </li>
